scroll de js listo
solo falta el resposive

--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
         </div>
     </section>
 
+
+    <!-- boton ir hacia arriba -->
+    <div class="up no-display-up" id="scroll-up">
+        <img src="img/ico/up.png" style="width: 3rem;" alt="" alt="dasljk">
+    </div>
+
+    <!-- seccion del contactos -->
     <footer>
         
         <div class="contacto">
