--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         
         <!-- formulario de la solicitud del servicio -->
         <div class="servicio-form">
-            <form action="" autocomplete="off" aria-required="true">
+            <form action="" id="form" autocomplete="off" aria-required="true">
                 <input type="text" name="" id="nombre" placeholder="Nombre">
                 <input type="text" name="" id="apellido" placeholder="Apellido">
                 <input type="number" name="" id="telefono" placeholder="Telefono">
@@ -267,5 +267,6 @@
 
     </footer>
     <script src="main/main.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
