scroll cambiado a html y css para mejorar el responsive

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                         <a class="menu-list" id="inicio" href="#">Inicio</a>
                     </li>
                     <li>
-                        <a class="menu-list" id="recetas-link" href="#">Recetas</a>
+                        <a class="menu-list" href="#recetas-link" href="#">Recetas</a>
                     </li>
                     <li>
-                        <a class="menu-list" id="servicios-link" href="#">Servicios</a>
+                        <a class="menu-list" href="#servicios-link" href="#">Servicios</a>
                     </li>
                     <li>
-                        <a class="menu-list" id="nosotros-link" href="#">Nosotros</a>
+                        <a class="menu-list" href="#nosotros-link" href="#">Nosotros</a>
                     </li>
                     <li>
-                        <a class="menu-list" id="contactos-link" href="#">Contactos</a>
+                        <a class="menu-list" href="#contactos-link" href="#">Contactos</a>
                     </li>
                 </ul>
 
@@ -51,7 +51,7 @@
 
 
     <!-- seccion de las recetas -->
-    <section class="recetas">
+    <section class="recetas" id="recetas-link">
         <div class="recetas-title">
             <h2>Recetas</h2>
         </div>
@@ -199,7 +199,7 @@
 
 
     <!-- seccion de los servicios -->
-    <section class="servicios">
+    <section class="servicios" id="servicios-link">
         <div class="servicios-title">
             <h2>Servicios</h2>
         </div>
@@ -225,7 +225,7 @@
 
     <!-- seccion de nosotros -->
 
-    <section class="nosotros" >
+    <section class="nosotros" id="nosotros-link" >
         
         <div class="nosotros-title">
             <h2>Nosotros</h2>
@@ -248,7 +248,7 @@
     </div>
 
     <!-- seccion del contactos -->
-    <footer>
+    <footer id="contactos-link">
         
         <div class="contacto">
             <h4>Comunicate con nosotros</h4>
